--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -17,16 +17,16 @@
     <div class="p-5 bg-body-tertiary my-3 mb-5">
         <div class="row">
             <div class="mb-5 mb-lg-0 col-lg-3 col-6">
-                <div class="text-sm text-uppercase text-muted mb-3">Order no.</div><span class="h5">2019</span>
+                <div class="text-sm text-uppercase text-muted mb-3">Order no.</div><span class="h5">{{status[0]}}</span>
             </div>
             <div class="mb-5 mb-lg-0 col-lg-3 col-6">
-                <div class="text-sm text-uppercase text-muted mb-3">Date</div><span class="h5">Dec 17, 2023</span>
+                <div class="text-sm text-uppercase text-muted mb-3">Date</div><span class="h5">{{status[2]}}</span>
             </div>
             <div class="mb-5 mb-lg-0 col-lg-3 col-6">
-                <div class="text-sm text-uppercase text-muted mb-3">Total</div><span class="h5">$450</span>
+                <div class="text-sm text-uppercase text-muted mb-3">Total</div><span class="h5">₹{{status[4]}}</span>
             </div>
             <div class="mb-5 mb-lg-0 col-lg-3 col-6">
-                <div class="text-sm text-uppercase text-muted mb-3">Shipping</div><span class="h5">DHL</span>
+                <div class="text-sm text-uppercase text-muted mb-3">Status</div><span class="h5">{{status[3]}}</span>
             </div>
         </div>
     </div>
