--- a/templates/orders.html
+++ b/templates/orders.html
@@ -25,8 +25,8 @@
                     <span class="badge rounded-pill text-bg-success">Delivered</span> {% endif %}
                 </td>
                 <td>
-                    <a role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
-                    <a role="button" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></a>
+                    <a href="/orders/{{order[0]}}" role="button" class="btn btn-sm btn-primary"><i class="bi bi-eye"></i></a>
+                    <a role="button" class="btn btn-sm btn-danger btn-remove-order" data-id="{{order[0]}}"><i class="bi bi-trash"></i></a>
                 </td>
             </tr>
             {% endfor %}
