--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                             <a role="button" class="btn btn-outline-secondary btn-add-cart w-100" data-id="{{p[0]}}">
                                 <i class="bi bi-cart-plus me-2"></i>Add to cart</a> {% endif %}
                         </div>
-                        <a role="button" class="btn btn-outline-secondary d-block mt-2" data-id="{{p[0]}}"><i class="bi bi-suit-heart me-2"></i>Add to Wishlist</a>
+                        <a role="button" class="btn btn-outline-secondary btn-add-wishlist d-block mt-2" data-id="{{p[0]}}"><i class="bi bi-suit-heart me-2"></i>Add to Wishlist</a>
                 </div>
             </div>
         </div>
