--- a/templates/orders.html
+++ b/templates/orders.html
@@ -3,6 +3,7 @@
 <div class="container my-5">
     <label class="fs-5 mb-3"><a href="/" class="text-decoration-none text-body-tertiary">Home</a> - <a href="/orders" class="text-decoration-none text-body">Orders</a></label>
     <h4 class="fw-semibold display-6">Your Orders</h4>
+    {% if orders|length > 0 %}
     <table class="table table-hover">
         <thead>
             <tr class="text-center">
@@ -32,7 +33,25 @@
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
+    <div class="mt-5 my-3">
+        <div class="d-flex align-items-center justify-content-center mb-3">
+            <div class="empty-cart text-body-tertiary">
+                <i class="bi bi-cart-x display-1"></i>
+            </div>
+            <div class="empty-cart-info text-body-tertiary ms-3 mt-3">
+                <h4 class="fw-normal mb-1">No orders found!</h4>
+                <p class="lead">No orders found!</p>
+            </div>
+        </div>
+        <div class="d-flex align-items-center justify-content-center mt-4">
+            <a role="button" class="btn btn-sm btn-outline-secondary rounded-0" href="/"><i
+                class="bi bi-arrow-left me-2"></i>Continue shopping</a>
+        </div>
+    </div>
+    {% endif %}
 </div>
+{% if orders|length > 0 %}
 <div class="py-5 py-lg-6 bg-gray">
     <div class="container">
         <div class="row">
@@ -75,4 +94,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endif %} {% endblock %}
