--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -13,22 +13,8 @@
                 class="bi {% if item == 'Cart' %}bi-cart-plus{% elif item == 'Orders' %}bi-bag{% elif item == 'Wishlist' %}bi-list-task{% endif %} me-1"></i>{{ item }}</a>
                 </li>
                 {% endfor %}
+                <li><a class="nav-link" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
             </ul>
-
-            <div class="ms-2 d-flex align-items-center">
-                <div class="flex-shrink-0 dropdown">
-                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle fs-6" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="mdo" width="26" height="26" class="rounded-circle">
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end mt-2">
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle me-2"></i>My profile</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-pencil-square me-2"></i>Edit profile</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="bi bi-gear me-2"></i>Settings</a></li>
-                        <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/logout"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 </nav>
